[fb] exclude filter, FixedScopedPreferenceStore